# WhatForTea

./: .dockerignore  .env.example  .env.test  .gitignore  CHECKPOINT.md  CLAUDE.md  Caddyfile  Makefile  PRODUCT_OVERVIEW.md  README.md  SPEC_V2.md  aimock.json  docker-compose.synology.yml  docker-compose.yml  new-feature-spec.md  plan.md
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/agent_config/: agent_settings.yaml  ingestion_prompt.md  normaliser_prompt.md  nutrition_prompt.md  receipt_prompt.md  url_ingestion_prompt.md  voice_command_prompt.md
backend/alembic/: env.py
backend/alembic/versions/: 2bd943073a70_seed_canonical_ingredients.py  5067703d24c7_seed_unit_conversions.py  54092742cd9b_nullable_ingredient_id_on_recipe_.py  a9d2e4f6c801_add_servings_to_meal_plan_entries.py  b2c3d4e5f6a7_seed_ingredient_substitutes.py  b65776dded38_initial_schema.py  c3d4e5f6a7b8_cooking_session_history_fields.py  d4e5f6a7b8c9_add_image_fingerprint_to_recipes.py  e38f3283b1e4_gin_index_ingredients_aliases.py  e5f6a7b8c9d0_add_source_url_to_recipes.py  f1a2b3c4d5e6_servings_quantities_and_step_image_description.py  f6a7b8c9d0e1_add_nutrition_estimate_to_recipes.py  g7h8i9j0k1l2_add_expires_at_to_pantry_items.py  h8i9j0k1l2m3_add_collections.py  i9j0k1l2m3n4_add_users_households.py  j0k1l2m3n4o5_add_shopping_list_items.py  k1l2m3n4o5p6_add_email_and_reset_tokens.py  l2m3n4o5p6q7_add_force_password_change.py  m3n4o5p6q7r8_normalise_mood_tags.py  n4o5p6q7r8s9_add_push_subscriptions.py  o5p6q7r8s9t0_add_google_oauth.py  p6q7r8s9t0u1_add_household_id_to_pantry.py
backend/app/: config.py  errors.py  logging_config.py  main.py  metrics.py  worker.py
backend/app/agents/: cooking_agent.py  ingest_agent.py  llm.py  pantry_agent.py  planner_agent.py  recipe_agent.py  teabot.py
backend/app/middleware/: auth.py  logging.py
backend/app/models/: __init__.py  collection.py  ingest.py  ingredient.py  normalised_amount.py  pantry.py  plan.py  push.py  recipe.py  session.py  shopping.py  user.py
backend/app/schemas/: barcode.py  (+10 more)
backend/config/: pack_sizes.yaml
(+134 files in other folders)
